<resources>
    <string name="app_name">BaseAlumnos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lucina</string>
    <string name="nav_header_subtitle">I challenge my fate</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="agregar_persona">Agregar Persona</string>
    <string name="ver_notas">Ver Notas</string>
    <string name="agregar_notas">Agregar Notas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carnet">Carnet</string>
    <string name="busar">Busar</string>
    <string name="actualizar">Actualizar</string>
    <string name="limpiar">Limpiar</string>
    <string name="nombre">Nombre</string>
    <string name="nota">Nota</string>
    <string name="eliminar">Eliminar</string>
    <string name="registrar_alumno">Registrar Alumno</string>
    <string name="promedio">Promedio</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="grade">Grade</string>
</resources>
