<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:id="@+id/card_view"
    card_view:cardUseCompatPadding="true"
    android:elevation="7dp"
    card_view:cardCornerRadius="2dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="@android:color/white"
        android:layout_height="match_parent"
        android:orientation="vertical"
       >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/id"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name2"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grade"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/grade"/>



    </LinearLayout>


</android.support.v7.widget.CardView>